Change to Java 8 Dependencies version update